@@ -1,3 +1,6 @@
+* 2006-04-10 Jeremy Sanders <jeremy@jeremysanders.net>
+  - Clip plotters to axes ranges rather than plot
+	
 * 2006-04-09 Jeremy Sanders <jeremy@jeremysanders.net>
   - Further icons for treeview
   - Move link buttons into label of setting
